--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,10 +138,13 @@ jobs:
     name: Build Verification
     runs-on: ${{ matrix.os }}
     needs: [test, lint]
+    defaults:
+      run:
+        shell: bash
     
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         go-version: ['1.23']
     
     steps:
@@ -156,28 +159,49 @@ jobs:
       
       - name: Get git commit hash
         id: git
+        shell: bash
         run: |
           echo "hash=$(git rev-parse --short HEAD || echo 'unknown')" >> $GITHUB_OUTPUT
       
       - name: Download dependencies
+        shell: bash
         run: go mod download
       
+      - name: Set binary name
+        id: binary
+        shell: bash
+        run: |
+          if [ "${{ matrix.os }}" = "windows-latest" ]; then
+            echo "name=ark.exe" >> $GITHUB_OUTPUT
+            echo "path=build/ark.exe" >> $GITHUB_OUTPUT
+          else
+            echo "name=ark" >> $GITHUB_OUTPUT
+            echo "path=build/ark" >> $GITHUB_OUTPUT
+          fi
+      
       - name: Build binary
+        shell: bash
         run: |
           mkdir -p build
           GIT_COMMIT="${{ steps.git.outputs.hash }}"
           BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-          go build -ldflags "-X github.com/mbeniwal-imwe/ark/cmd.Version=dev -X github.com/mbeniwal-imwe/ark/cmd.BuildDate=$BUILD_DATE -X github.com/mbeniwal-imwe/ark/cmd.GitCommit=$GIT_COMMIT" -o build/ark .
+          go build -ldflags "-X github.com/mbeniwal-imwe/ark/cmd.Version=dev -X github.com/mbeniwal-imwe/ark/cmd.BuildDate=$BUILD_DATE -X github.com/mbeniwal-imwe/ark/cmd.GitCommit=$GIT_COMMIT" -o "${{ steps.binary.outputs.path }}" .
       
       - name: Test binary
+        shell: bash
         run: |
-          ./build/ark version
-          ./build/ark --help || true
+          if [ "${{ matrix.os }}" = "windows-latest" ]; then
+            ./build/ark.exe version
+            ./build/ark.exe --help || true
+          else
+            ./build/ark version
+            ./build/ark --help || true
+          fi
       
       - name: Upload binary
         uses: actions/upload-artifact@v4
         if: github.event_name == 'push'
         with:
           name: ark-${{ matrix.os }}
-          path: build/ark
+          path: ${{ steps.binary.outputs.path }}
           retention-days: 7
